# advent-of-code-2023

./: .gitignore  .pdm-python  LICENSE  Makefile  README.md  pyproject.toml
2015/: go.mod  go.sum  main.go  pyproject.toml  run.go
2015/aoc/: day1.go  day2.go  day3.go  day4.go  day5.go
2015/src/: 1.py  10.py  11.py  12.py  13.py  14.py  16.py  17.py  19.py  2.py  23.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2015/src/util/: input.py  list.py
2015/util/: array.go  input.go  string.go
2016/: .eslintrc.js  package.json  pnpm-lock.yaml
2016/src/: 1.ts  10.ts  12.ts  15.ts  16.ts  18.ts  2.ts  20.ts  3.ts  4.ts  5.ts  6.ts  7.ts  8.ts  9.ts
2016/src/util/: array.ts  grid.ts
2017/: Taskfile.yml  pyproject.toml
2017/src/: 1.py  11.py  12.py  15.py  16.py  17.py  18.py  2.py  4.py  5.py  6.py  7.py  8.py  9.py
2017/src/aoc/: 2.py
2017/src/util/: algo.py  input.py  list.py  string.py
2018/: jsconfig.json  package.json  pnpm-lock.yaml
2018/src/: 1.js  11.js  16.js  18.js  2.js  23.js  3.js  4.js  5.js  6.js  7.js  8.js
2018/src/util/: algorithm.js  array.js  datetime.js  grid.js  input.js  string.js
2019/: package.json  pnpm-lock.yaml
2019/src/: 1.ts  16.ts  2.ts  22.ts  3.ts  4.ts  5.ts  6.ts  8.ts
2019/src/intcode/: computer.ts
2019/src/shared/: computer.ts  intcode.ts
2019/src/util/: array.ts  input.ts  loop.ts
2019/src/util/grid/: grid.ts  index.ts  position.ts
2020/: Taskfile.yml  go.mod  hello.py  main.go  pyproject.toml  run.go
2020/aoc/: day1.go  day2.go  day3.go  day4.go  day5.go  day6.go
2020/src/: 1.py
2020/src/utils/: input.py
2020/util/: array.go  input.go
2021/: .eslintrc.js  package.json  pnpm-lock.yaml
2021/src/: 1.js  1.ts  10.js  11.js  14.js  2.js  2.ts  3.js  3.ts  4.js  4.ts  5.js  6.js  6.ts  7.js  8.js  9.js
2021/src/util/: array.js  array.ts  grid.js  string.js  string.ts
2022/: .eslintrc.js
2022/src/: 1.ts  10.ts  13.ts  2.ts  21.ts  3.ts  4.ts  5.ts  6.ts  7.ts  8.ts
2022/src/util/: array.ts  existence.ts  input.ts  math.ts  tree.ts
2023/: .pdm-python  Makefile  README.md  pyproject.toml  pyrightconfig.json
2023/aoc/: util.py
2023/aoc/puzzles/: day1.py  day10.py  day11.py  day18.py  day19.py  day20.py  day22.py  day5.py  day6.py  day7.py
2023/src/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
2023/src/util/: algo.py  input.py  list.py  string.py
2023/tests/: test_10.py  test_14.py  test_15.py  test_17.py  test_18.py  test_21.py  test_22.py  test_23.py  test_3.py
2024/: eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
2024/src/: 1.ts  10.ts  11.ts  12.ts  13.ts  14.ts  15.ts  16.ts  17.ts  18.ts  19.ts  2.ts  20.ts  21.ts  22.ts  23.ts  24.ts  25.ts  3.ts  4.ts  5.ts  6.ts  7.ts  8.ts  9.ts
2024/src/utils/: array.ts  input.ts  math.ts  matrix.ts  number.ts  perf.ts  string-set.ts  vm.ts
aoc/: util.py
aoc/puzzles/: day1.py  day10.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day2.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day7.py  day8.py  day9.py
aoc/util/: input.py
tests/: test_10.py  test_13.py  test_14.py  test_16.py  test_19.py  test_20.py  test_22.py  test_23.py  test_24.py  test_25.py  test_9.py  test_day1.py  test_day11.py  test_day12.py  test_day2.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
