[project.urls]
Homepage = "https://jsec.github.io/advent-of-code"
Repository = "https://github.com/jsec/advent-of-code"

[tool.poetry]
name = "aoc-2015"
version = "0.1.0"
description = "Advent of Code - 2015"
authors = ["Jarrod Seccombe <jarrod.seccombe@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.8.0"
networkx = "^3.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.0"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
