[project]
name = "aoc"
version = "0.1.0"
description = "Advent of Code 2017"
authors = [{ name = "Jarrod Seccombe", email = "jarrod.seccombe@icloud.com" }]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
Homepage = "https://jsec.github.io/advent-of-code"
Repository = "https://github.com/jsec/advent-of-code"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.mypy]
files = ["aoc"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
  # flake8-2020
  "YTT",
  # flake8-bandit
  "S", # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-comprehensions
  "C4",
  # flake8-debugger
  "T10",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  "W",
  # pyflakes
  "F",
  # pygrep-hooks
  "PGH",
  # pyupgrade
  "UP",
  # ruff
  "RUF",
  # tryceratops
  "TRY",
]
ignore = [
  # LineTooLong
  "E501",
  # DoNotAssignLambda
  "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.pdm]
distribution = false
[tool.pdm.dev-dependencies]
test = ["pytest>=7.2.0", "pytest-cov>=4.0.0"]
dev = ["mypy>=0.981"]

